# llm-server

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml
output/: sample1.txt
src/llm_server/: loader.py
src/llm_server/chat/: azure_openai.py
src/llm_server/utils/: format.py
src/server/: main.py
src/server/api/routers/: __init__.py  stream.py  translate.py
src/server/apis/routers/: stream.py
src/server/chains/translate/: __init__.py  main.py
src/server/chat/: azure_openai.py
src/server/chat_models/: azure_embedding.py  azure_openai.py  azure_openai_chat.py
src/server/converter/: pdf2md.py
src/server/converter/pdf_pymupdf/: __init__.py  main.py  type.py  utils.py
src/server/core/: env_vars.py
src/server/llms/: azure_openai_chat.py
src/server/notebooks/: client.ipynb  use_pdfplumber.ipynb  use_pymupdf.ipynb
src/server/prompts/: test.py
src/server/samples/output/: sample1.txt
src/server/utils/: docs.py  format.py  pdf.py  rag.py  use_pdfplumber.ipynb  use_pymupdf.ipynb
src/server/utils/output_markdown/: document.md
web/: package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  page.tsx
web/components/: chat-box.tsx
web/hooks/: use-event-source.tsx
