[project]
name = "server"
version = "0.1.0"
description = "LLM Server"
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "langchain-openai>=0.1.9",
    "pydantic-settings>=2.3.3",
    "langchain-text-splitters>=0.2.1",
    "langchain>=0.2.5",
    "bs4>=0.0.2",
    "langchain-chroma>=0.1.1",
    "types-beautifulsoup4>=4.12.0.20240511",
    "lxml>=5.2.2",
    "html5lib>=1.1",
    "azure-ai-documentintelligence>=1.0.0b3",
    "ipython>=8.25.0",
    "ipykernel>=6.29.4",
    "pymupdf>=1.24.5",
    "regex>=2024.5.15",
    "types-regex>=2024.5.15.20240519",
    "langchainhub>=0.1.20",
    "langchain-community>=0.2.5",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.server.main:app --reload"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
