[project]
name = "server"
version = "0.1.0"
description = "LLM Server"
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "langchain-openai>=0.1.23",
    "pydantic-settings>=2.5.2",
    "langchain-text-splitters>=0.2.4",
    "langchain>=0.2.16",
    "bs4>=0.0.2",
    "langchain-chroma>=0.1.3",
    "types-beautifulsoup4>=4.12.0.20240907",
    "lxml>=5.3.0",
    "html5lib>=1.1",
    "azure-ai-documentintelligence>=1.0.0b4",
    "ipython>=8.27.0",
    "ipykernel>=6.29.5",
    "pymupdf>=1.24.10",
    "regex>=2024.9.11",
    "types-regex>=2024.7.24.20240726",
    "langchainhub>=0.1.21",
    "langchain-community>=0.2.16",
    "langserve>=0.2.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.server.main:app --reload"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
