[project]
name = "server"
version = "0.1.0"
description = "LLM Server"
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "langchain-openai>=0.1.23",
    "langchain-text-splitters>=0.2.4",
    "langchain>=0.2.16",
    "langchain-chroma>=0.1.3",
    "langserve>=0.2.3",
    "sse-starlette>=2.1.3",
    "pydantic-settings>=2.5.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.server.main:app --reload"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

